seperating the venilla.css file from main css file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Webstie to provice I.T servies and solutions">
     <link rel="icon" type="image/x-icon" href="media/img/logo/DDE-logo-white.png">
     <link rel="stylesheet" href="src/output.css">
+    <link rel="stylesheet" href="src/venilla.css">
     <title>Darsh D. Coding - homepage</title>
 </head>
 <body>
@@ -45,24 +46,27 @@
         <div class="team-grid-container">
             <!-- CEO Card -->
             <div class="team-card">
-                <img src="/media/img/ceo.jpg" alt="CEO Photo">
-                <div class="designation">Executive Officer</div>
+                <img src="/media/img/logo/DDE-logo-black.png" alt="CEO Photo">
+                <div class="designation">Darsh</div>
+                <div class="role">Executive</div>
                 <div class="role">Leads the company vision, strategy, and growth.</div>
-                <div class="quote">"Innovation distinguishes between a leader and a follower."</div>
+                <div class="quote">"Dekh Lenge bc..."</div>
             </div>
             <!-- CTO Card -->
             <div class="team-card">
                 <img src="/media/img/co-founders/sanjay.webp" alt="CTO Photo">
-                <div class="designation">Technology Officer</div>
+                <div class="designation">Sanjay Bhandari</div>
+                <div class="role">Tech. Head</div>
                 <div class="role">Heads technology strategy and product development.</div>
-                <div class="quote">"Technology is best when it brings people together."</div>
+                <div class="quote">"Daal lo khud se...ya bata do mujhe"</div>
             </div>
             <!-- CMO Card -->
             <div class="team-card">
                 <img src="/media/img/co-founders/nitin.webp" alt="CMO Photo">
-                <div class="designation">Media Officer</div>
+                <div class="designation">Nitin Ghaghariya</div>
+                <div class="role">Media Head</div>
                 <div class="role">Drives marketing, branding, and customer engagement.</div>
-                <div class="quote">"Marketing is no longer about the stuff you make, but the stories you tell."</div>
+                <div class="quote">"Daal lo khud se...ya bata do mujhe"</div>
             </div>
         </div>
     </main>
