--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <nav>
     <div class="flex nav-container">
         <div class="flex nav-logos">
-            <img src="/media/img/logo/DDE-logo-black.png" id="logo-img" alt="Darsh D. Coding Logo">
-            <img src="/media/img/logo/DDE-name-black-cropped.png" alt="Darsh D. Coding Logo-name">
+            <img src="./media/img/logo/DDE-logo-black.png" id="logo-img" alt="Darsh D. Coding Logo">
+            <img src="./media/img/logo/DDE-name-black.png" alt="Darsh D. Coding Logo-name">
         </div>
         <div class="flex nav-opt">
             <a href="/">Projects</a>
@@ -46,7 +46,7 @@
         <div class="team-grid-container">
             <!-- CEO Card -->
             <div class="team-card">
-                <img src="/media/img/logo/DDE-logo-black.png" alt="CEO Photo">
+                <img src="./media/img/logo/DDE-logo-black.png" alt="CEO Photo">
                 <div class="designation">Darsh</div>
                 <div class="role">Executive</div>
                 <div class="role">Leads the company vision, strategy, and growth.</div>
@@ -54,7 +54,7 @@
             </div>
             <!-- CTO Card -->
             <div class="team-card">
-                <img src="/media/img/co-founders/sanjay.webp" alt="CTO Photo">
+                <img src="./media/img/co-founders/sanjay.webp" alt="CTO Photo">
                 <div class="designation">Sanjay Bhandari</div>
                 <div class="role">Tech. Head</div>
                 <div class="role">Heads technology strategy and product development.</div>
@@ -62,7 +62,7 @@
             </div>
             <!-- CMO Card -->
             <div class="team-card">
-                <img src="/media/img/co-founders/nitin.webp" alt="CMO Photo">
+                <img src="./media/img/co-founders/nitin.webp" alt="CMO Photo">
                 <div class="designation">Nitin Ghaghariya</div>
                 <div class="role">Media Head</div>
                 <div class="role">Drives marketing, branding, and customer engagement.</div>
