changing logo name png and fixing the scrolly nature of page

--- a/index.html
+++ b/index.html
@@ -10,41 +10,26 @@
     <title>Darsh D. Coding - homepage</title>
 </head>
 <body>
-    <!-- <nav class="w-[70vw] mx-[15vw] mt-[4vh] flex">
-  <div id="nav-container" class="w-[100%] flex justify-between items-center">
-    <div class="logos flex flex-row gap-0.5">
-            <img src="media/img/logo/DDE-logo-black.png" style="height:50px;" />
-            <img src="media/img/logo/DDE-name-black-cropped.png" style="height:50px;" />
-    </div>
-    <div class="nav-options flex flex-row gap-2">
-      <a>Projects</a>
-      <a>Clients</a>
-      <a>About Us</a>
-      <a>Contact Us</a>
-    </div>
-  </div>
-</nav> TODO: use tailwind for styling-->
-
 <nav>
     <div class="flex nav-container">
         <div class="flex nav-logos">
             <img src="./media/img/logo/DDE-logo-black.png" id="logo-img" alt="Darsh D. Coding Logo">
-            <img src="./media/img/logo/DDE-name-black.png" alt="Darsh D. Coding Logo-name">
+            <img src="./media/img/logo/DDE-name-black-cropped.png" alt="Darsh D. Coding Logo-name">
         </div>
         <div class="flex nav-opt">
             <a href="/">Projects</a>
             <a href="/">Clients</a>
             <a href="/">About Us</a>
-            <a href="/">Contact Us</a>
+            <a href="/">Let's Talk</a>
             <button id="toggle-dark">Dark Mode</button>
         </div>
     </div>
 </nav>
 
     <!-- Team Introduction Cards -->
-    <main>
+ <main>
         <div class="team-grid-container">
-            <!-- CEO Card -->
+
             <div class="team-card">
                 <img src="./media/img/logo/DDE-logo-black.png" alt="CEO Photo">
                 <div class="designation">Darsh</div>
@@ -52,7 +37,7 @@
                 <div class="role">Leads the company vision, strategy, and growth.</div>
                 <div class="quote">"Dekh Lenge bc..."</div>
             </div>
-            <!-- CTO Card -->
+
             <div class="team-card">
                 <img src="./media/img/co-founders/sanjay.webp" alt="CTO Photo">
                 <div class="designation">Sanjay Bhandari</div>
@@ -60,7 +45,7 @@
                 <div class="role">Heads technology strategy and product development.</div>
                 <div class="quote">"Daal lo khud se...ya bata do mujhe"</div>
             </div>
-            <!-- CMO Card -->
+
             <div class="team-card">
                 <img src="./media/img/co-founders/nitin.webp" alt="CMO Photo">
                 <div class="designation">Nitin Ghaghariya</div>
@@ -70,5 +55,13 @@
             </div>
         </div>
     </main>
+        <footer class="site-footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <img src="./media/img/logo/DDE-logo-black.png" alt="Darsh D. Coding Logo" class="footer-logo">
+                <span>© 2025 Darsh D. Coding. All rights reserved.</span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
